--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,9 +3,23 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
+        <div class="field form-group">
+          <%= f.label :username %><br>
+          <%= f.text_field :username, autofocus: true, class: 'form-control' %>
+        </div>
+
+        <div class="field form-group">
+          <%= f.label :first_name %><br>
+          <%= f.text_field :first_name, class: 'form-control' %>
+        </div>
+
+        <div class="field form-group">
+          <%= f.label :last_name %><br>
+          <%= f.text_field :last_name, class: 'form-control' %>
+
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
